--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.4",
-    "medium-sdk": "0.0.1"
+    "medium-sdk": "Medium/medium-sdk-nodejs#647efc92d4e9bd4"
+  },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/Medium/medium-sdk-nodejs.git"
   }
+
 }
