--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.4",
-    "medium-sdk": "Medium/medium-sdk-nodejs#647efc92d4e9bd4"
+    "medium-sdk": "Medium/medium-sdk-nodejs#647efc92d4e9bd4",
+    "path": "^0.12.7"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/Medium/medium-sdk-nodejs.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Medium/medium-sdk-nodejs.git"
   }
-
 }
