chore: install ejs package

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Josh Sephton",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^2.3.4",
     "express": "^4.13.4",
     "forever": "^0.15.1",
     "medium-sdk": "Medium/medium-sdk-nodejs#647efc92d4e9bd4",
