chore: install body parser package

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Josh Sephton",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "ejs": "^2.3.4",
     "express": "^4.13.4",
     "forever": "^0.15.1",
